@@ -481,6 +481,12 @@ Working version
   exception backtraces for them.
   (Xavier Leroy, review by David Allsopp, report by Fabrice Le Fessant)
 
+- #12???: --with-target-bindir configure option implemented. This option
+  refers to the location of the runtime binaries on the target system for a
+  cross-compiler and is embedded in executables produced by ocamlc. It does
+  not affect the bytecode executables installed as part of the build.
+  (David Allsopp, review by ???)
+
 ### Bug fixes:
 
 - #11887, #11893: Code duplication in pattern-matching compilation
